Refactor to use Instant and improve collection checks
Replaced usage of java.util.Date with java.time.Instant for lastModifiedDate fields and related logic in connector modules. Updated test code to use URI for URL creation. Improved collection membership checks in web crawler plugin by replacing StringUtils.equalsAny/toArray with direct collection methods and Java streams. Updated Maven configuration to add pluginManagement for maven-compiler-plugin and fixed minor code style issues.